Fix document links: Make element/attribute names clickable + Add npm run generate
- Updated generator to make element and attribute names directly clickable links
- Removed emoji and 'View in Standard' text for cleaner professional appearance
- Element headings now show as [edm:EntityType](url) instead of separate emoji links
- Attribute names in tables now show as [BaseType](url) instead of separate links
- Added 'generate' script to package.json for easier documentation generation
- Regenerated all documentation with updated link format

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "clean": "rimraf dist",
+    "generate": "npx ts-node generate.ts",
     "generate-docs": "node dist/cli.js data/odata-edm-structure.json -o generated/OData_EDM_Structure_Generated.md --stats"
   },
   "keywords": [
