Add HTML preview functionality and complete preview TODO
✅ COMPLETED: previewing the generated doc
- Added markdown to HTML conversion using showdown
- Created preview.ts script with styled HTML template
- Added npm scripts: 'preview' and 'preview-serve'
- Removed navigation header from HTML template as requested
- Added browser auto-opening functionality (attempts to open preview)
- Generated HTML files have clean styling and proper formatting
- Updated .gitignore to exclude generated/ and preview/ folders

Changes:
- New preview.ts script for markdown → HTML conversion
- Updated package.json with preview and preview-serve scripts
- Added showdown and http-server dependencies
- Modified generator.ts to consolidate source metadata display
- Updated .gitignore to exclude build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,9 @@ tmp/
 temp/
 
 # Project specific
-# Keep generated files in git to show examples
-# generated/
+# Generated documentation and preview files
+generated/
+preview/
 
 # Keep data and schema files as they are part of the project
 # data/
