--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "prettier --write src/**/*.ts",
     "clean": "rimraf dist",
     "generate": "npx ts-node generate.ts",
-    "generate-docs": "node dist/cli.js data/odata-edm-structure.json -o generated/OData_EDM_Structure_Generated.md --stats"
+    "generate-docs": "node dist/cli.js data/odata-edm-structure.json -o generated/OData_EDM_Structure_Generated.md --stats",
+    "preview": "npx ts-node preview.ts",
+    "preview-serve": "npm run preview && npx http-server preview -p 8080 -o"
   },
   "keywords": [
     "odata",
@@ -29,15 +31,18 @@
   "author": "OData EDM Structure Converter",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
+    "@types/showdown": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
+    "http-server": "^14.1.1",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.0",
+    "showdown": "^2.1.0",
+    "ts-jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
   "engines": {
