Major cleanup and improvements
- Fixed enum-only attribute rendering (OnDelete Action now renders as 'Basic (Cascade, None, SetNull, SetDefault)')
- Removed preview functionality completely (preview.ts, dependencies, scripts)
- Removed summary section from generated markdown (kept console output)
- Updated schema to include permittedChildren property
- Cleaned up generator by removing unused methods (generateSummary, calculateStatistics)
- Updated TODO.md to reflect completed tasks
- Reduced dependencies by 40 packages through cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,8 @@ tmp/
 temp/
 
 # Project specific
-# Generated documentation and preview files
+# Generated documentation files
 generated/
-preview/
 
 # Keep data and schema files as they are part of the project
 # data/
@@ -86,4 +85,3 @@ preview/
 
 
 generated/*
-preview/*
