--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "Christof Sprenger",
   "license": "MIT",
   "devDependencies": {
+    "@types/handlebars": "^4.0.40",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -56,5 +57,8 @@
   "bugs": {
     "url": "https://github.com/oasis/odata-edm-structure-converter/issues"
   },
-  "homepage": "https://github.com/oasis/odata-edm-structure-converter#readme"
+  "homepage": "https://github.com/oasis/odata-edm-structure-converter#readme",
+  "dependencies": {
+    "handlebars": "^4.7.8"
+  }
 }
