--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/cli.js",
-    "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "clean": "rimraf dist",
     "generate": "npx ts-node generate.ts",
-    "validate-links": "npx ts-node validate-links.ts"
+    "validate-links": "npx ts-node validate-links.ts",
+    "preview": "npm run build && cd generated && pandoc edm_structure.md -o edm_structure.pdf && start edm_structure.pdf"
   },
   "keywords": [
     "odata",
@@ -30,15 +30,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/handlebars": "^4.0.40",
-    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "jest": "^29.0.0",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.0",
-    "ts-jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
   "engines": {
