FEATURE: Implement flattened element structure
🏗️ MAJOR REFACTORING: Transformed nested element structure to flat array

**Data Structure Changes:**
- Moved from elementGroups[].elements[] to flat elements[] array
- Added elementGroups[] metadata array with id field
- Each element now has 'group' property referencing group ID
- Maintains all existing functionality with identical output

**Code Updates:**
- Updated TypeScript interfaces in src/types.ts
- Refactored parser methods to work with flat structure
- Updated generator methods for new data access patterns
- Fixed CLI statistics display for new summary format
- All templates continue to work unchanged

**Benefits:**
- Simpler data structure easier to query and manipulate
- Direct element access without nested loops
- Better performance for element lookups
- Cleaner separation of data and metadata
- Preserved markdown output quality

**Testing:**
- All builds pass successfully
- Generated markdown output verified identical
- Statistics display updated and working
- Data validation passes with new structure

✅ Closes TODO item: flatten element structure grouping

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf dist",
     "generate": "npx ts-node generate.ts",
     "validate-links": "npx ts-node validate-links.ts",
-    "preview": "npm run build && cd generated && pandoc edm_structure.md -o edm_structure.pdf && start edm_structure.pdf"
+    "preview": "npm run build && cd generated && pandoc edm_structure.md -o edm_structure.html && start edm_structure.html"
   },
   "keywords": [
     "odata",
