Enhance documentation generation and styling
- Add modern CSS with OS theme awareness and Inter font stack
- Improve markdown templates with better element structure
- Add footer template with source attribution
- Update data structure with metadata reorganization
- Enhance table styling with proper row separators
- Fix template formatting and external link handling
- Clean up build scripts and generated files
- Remove backup files and reorganize documentation

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "clean": "rimraf dist",
-    "generate": "npx ts-node generate.ts",
+    "generate": "npm run build && npx ts-node generate.ts",
     "validate-links": "npx ts-node validate-links.ts",
-    "preview": "npm run build && npm run generate && cd generated && pandoc edm_structure.md -o edm_structure.html"
+    "html" : "pandoc ./generated/edm_structure.md -o generated/edm_structure.html -c css/article.css --embed-resources -s",
+    "preview": "npm run generate && npm run html"
   },
   "keywords": [
     "odata",
